samples/_failures_safe/1761279358_dbf0c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47b914f3.c: In function ‘main’:
./samples/SAFE/__tmp_47b914f3.c:145:17: error: expected identifier or ‘(’ at end of input
  145 |                 for (int
      |                 ^~~
./samples/SAFE/__tmp_47b914f3.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47b914f3.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47b914f3.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47b914f3.c:145:17: error: expected declaration or statement at end of input
